assets/css/bind.scss
/* ... */
/* mobile tabs block */
.ff-toolbar {
	background: $bg-toolbar-color;
	padding: 0 24px 0 24px !important;

	display: flex;
	justify-content: space-between;
	align-items: center;

	.normal-logo{
		margin: 16px 0px;
	}

	.ff_account_menu {
		display: block;
		border: 1px solid $border-bold-color;
		color: $bg-main-color;
		padding: 0 12px;
		height: 32px;
		font-size: $label-size;
		text-transform: uppercase;
		font-weight: bold;
		line-height: 32px;
		background: none;
	}
	.ff_account_menu:hover {
		border: 1px solid $link-color;
		color: $link-color;
		transition: color 0.2s ease-in-out;
	}
}

/* mobile tabs block */
.ff_mobile_tabs{
	list-style: none;
	margin: 0;
	padding: 0;
	font-size: $coin-info-size;
	height: 48px;
	border-bottom: 1px solid $border-bold-color;
	border-left: 1px solid $border-thin-color;
	background-color: $bg-coin-color;
	li {
		margin: 0;
		display: inline-block;
		padding: 0 0px 0 24px;
		span {
			line-height: 48px;
			display: inline-block;
    		height: 48px;
		}
		.active_tab {
			border-bottom: 2px solid $bg-toolbar-color;
		}
	}
}



/* coins block */
.ff_coin_index {
	.currency {
		padding: 0px 0px 0px 24px;
		height: 56px;
		border-bottom: 1px solid $border-thin-color;
		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
		transition: box-shadow 0.1s ease-in-out;
		position: relative;
		border-bottom: 1px solid $border-thin-color;
		color: $dark-primary-color;
		font-size: $second_size;
		line-height: 56px;
		&.nuxt-link-exact-active {
			.i_symbol {
				color: $link-color;
				transition: color 0.1s ease-in-out;
			}
		}
	}
	.currency:hover {
		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
	}
	.coin_row {
		display: flex;
		position: relative;

		.coin_details_item {
			flex-grow: 1;
			flex-basis: 100%;
			overflow: hidden;
			text-align: right;
		}
		.coin_details_item.change {
			color: $up-value-color;
			font-weight: bold;
		}
		.test_symbol {
			position: absolute;
			top:0;
			line-height: 52px;
		}
		.i_symbol {
			color: $l-color;
		}
		.i_cap, .i_volume, .i_sup {
			flex-basis: 200%;
		}
	}
	.coin_header {
		border-bottom: 1px solid $border-bold-color;
		color: $label-color;
		font-size: $label-size;
		height: 36px;
		padding-left: 24px;
		display: flex;

		.coin_details_head {
			flex-grow: 1;
			line-height: 36px;
			flex-basis: 100%;
			overflow: hidden;
		}

		.i_cap, .i_volume, .i_sup {
			flex-basis: 200%;
		}
	}

}
@media (max-width: 769px) {
	.coin_row {
		.i_cap, .i_volume, .i_sup {
			display: none;
		}
	}
	.coin_header {
		.i_cap, .i_volume, .i_sup {
			display: none;
		}
		.coin_details_head {
			&.i_symbol a {
				display: none;
			}
		}
	}
	.coin_tooltip {
		display: none;
	}
}

@media (min-width: 768px) {
	.ff_coin_index { 
		.coin_tooltip {
			position: absolute;
			top: 0;
			left: 110%;
			z-index: 1;
			background-color: $bg-main-color;
			border: 1px solid $border-bold-color;
			font-size: $second_size;
			word-wrap: normal;
			white-space: nowrap;
			padding: 6px 12px;
			box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
			transition: top 0.2s ease;
			&.tooltip-enter-active {
				transition: all 0.1s ease;
			}
			&.tooltip-leave-active {
				transition: all 0.1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
			}
			&.tooltip-enter, &.tooltip-leave-to {
				transform: translateX(-10px);
				opacity: 0
			}
		}

		.coin_tooltip:before {
			content: '';
			display: block;  
			position: absolute;
			left: -10px;
			top: -1px;
			width: 0;
			height: 0;
  			border-bottom: 10px solid transparent; 
			border-right: 10px solid $border-bold-color; 
		}

		.coin_tooltip:after {
			content: '';
			display: block;  
			position: absolute;
			left: -8px;
			top: 0px;
			width: 0;
			height: 0;
  			border-bottom: 10px solid transparent; 
  			border-right: 10px solid white; 
		}
		.currency {
			padding: 8px 12px;
			height: auto;
			line-height: auto;
		}
		.coin_row {
			flex-direction: column;
			.coin_details_item {
				font-size: $label-size;
				line-height: 20px;
			}
			.i_symbol {
				color: $dark-primary-color;
				font-weight: bold;
			}
			.i_price {
				color: $label-color;
				text-align: right;
			}
			.coin_details_item.change {
				text-align: right;
			}
		}
		.coin_header {
			padding: 0 12px;
			height: 56px;
			.coin_details_head {
				display: none;
				&.i_symbol {
					display: block;
					padding-right: 10px;
					font-size: $second_size;
					a {
						display: block;
						line-height: 56px;
						height: 56px;
					}
				}
			}
		}
		.coin_header:hover {

			cursor: pointer;
			box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
			a {
				color: $link-color;
			}
		}
	}
}

.ff_coin_list {
	@extend .ff_coin_index;

	display: flex;
	flex-direction: row;
	margin:0 24px;
	padding: 0 !important;
	background: #fff;
	border-left: 1px solid $border-bold-color;

	.coin_row {
		height: 81px;
		width: calc(100%/8);
		border: 1px solid $border-bold-color;
		border-left:0;
	}

	.flex-row {
		padding:0;
		display: flex;
	}

	@media (max-width: 991px) {

		.coin_row {
			height: 81px;
			width: calc(100%/4);
			flex-direction: column;
			padding: 0;
			border-bottom: 0;

			.coin_details_item {
				font-size: $label-size;
				line-height: 20px;
			}
		}
		.currency {
			padding: 8px 12px;
		}

		.flex-row:last-child {
			border-bottom: 1px solid $border-bold-color;
		}
	}
}
/* ... */

